--- a/Parser/Parser/MainWindow.xaml
+++ b/Parser/Parser/MainWindow.xaml
@@ -5,6 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Parser"
         mc:Ignorable="d"
-        Title="MainWindow" Height="206.451" Width="256.452">
-    <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="45,88,0,0" VerticalAlignment="Top" Width="75" Click="Parse"/>
+        Title="MainWindow" Height="173.835" Width="167.384">
+    <Button x:Name="button" Content="Just do it" HorizontalAlignment="Left" Margin="45,60,0,0" VerticalAlignment="Top" Width="75" Click="Parse"/>
 </Window>
